# DAPPER

./: .coveragerc  .flake8  .gitignore  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .travis.yml  404.html  BnKF.py  CLAUDE.md  DA_algos.py  L95_vs_true_F.py  LICENCE.txt  README.md  THIRD_PARTY_NOTICES  addons.py  admin.py  bench_L95.py  bench_example.py  bench_multiple.py  benchmark.py  benchmark_Barotropic.py  benchmark_LorenzXY.py  chronos.py  common.py  conftest.py  convenience.py  da_algos.py  da_methods.py  enkf_and_ienkf.py  example_1.py  example_2.py  example_3.py  example_4.py  gen_ref_pages.py  index.html  licence.txt  matrices.py  misc.py  mise.toml  (+21 more)
.claude/: settings.local.json
.github/: push-docs.sh
.github/workflows/: colab-compat.yml  deploy-docs.yml  publish.yml  tests.yml  typing.yml
AdInf/: Can_NonLin_avoid_Divergence.py  Closure.py  EAKF_de_bias.py  M11_bias.py  NonLin_yet_Gaussian.py  bench_L63.py  bench_L95.py  bench_LUV.py  bench_LXY.py  bench_tmp.py  bench_wilks05.py  explore_iC2.py  filters.py  illust_Marg_vs_Cond.py  illust_iChi2_Gaussianity.py  illust_iChi2_sample.py  illust_inflation_series.py  illust_post_scale_mix.py  illust_xQ_DAG.py  inbreeding_1.py  inflation_distribution.py  multi_cycle_DiscretePosRV.py  one_cycle_bias.py  one_cycle_err.py  paper.mplstyle  paper2.mplstyle  prep_prez_figures.py  prep_print_figures.py  present_results.py  present_results_NEW.py  present_results_OLD.py  redundant_w.py  weighted_sum_chi2.py  widget_testing.py  wrong_normalization.py
EmblAUS/: Lor63_Lyap.py
PFxN/: Curse_of_Dim.py  bench_plot.py  estimate_1_by_importance.py  illust_PF.py  test_IS_bias.py
Stoch_iEnS/: Chen_Oliver_0D.py  Chen_Oliver_2013.py  Oliver_0D_2013.py  T_A_pinvA_forms.py  average_projection_mat.py  average_sensitivity.py  bench_L95.py  infl_regres.py  present_results.py
aux/: admin.py  chronos.py  convenience.py  localization.py  matrices.py  misc.py  randvars.py  series.py  stoch.py  utils.py  viz.py
bib/: bib2md.py  refs.bib
dapper/: README.md  __init__.py  admin.py  config.py  data_management.py  dict_tools.py  dpr_conf.py  dpr_config.ini  dpr_config.py  dpr_config.yaml  stats.py  stats_etc.md  xp_launch.py  xp_process.py
dapper/da_methods/: README.md  __init__.py  baseline.py  ensemble.py  extended.py  other.py  particle.py  utils.py  variational.py
dapper/doc_extras/: __init__.py  dev.py
dapper/mods/: README.md  __init__.py  explore_props.py  integration.py  test_TLMs.py  utils.py
dapper/tools/: __init__.py  chronos.py  colors.py  convenience.py  data_management.py  datafiles.py  linalg.py  liveplotting.py  localization.py  magic.py  math.py  maths.py  matrices.py  multiproc.py  multiprocessing.py  progressbar.py  randvars.py  remote.py  repr_util.py  rounding.py  seaborn-add-ons.mplstyle  seeding.py  series.py  stoch.py  struct.py  struct.pyi  utils.py  viz.py
data/doc_snippets/: ex_resample.py
dev_guide/: index.html
diag_R/: L95_vs_dtObs_2.py  da_methods_diagR.py
docs/: Makefile  abbrev_api_strings.py  adding.md  api.rst  bib.html  bib.py  bibliography.md  conf.py  config.mako  contributing.md  contributing.rst  dev_guide.html  dev_guide.md  dev_guide.py  features.md  gen_ref_pages.py  implementation.md  index.html  index.md  index.rst  license.rst  logo.mako  references.md  stats.md  stats_etc.md  test_resample.py  todo.md
docs/_modules/: dapper.admin.rst  dapper.da_methods.baseline.rst  dapper.da_methods.ensemble.rst  (+66 more)
examples/: README.md  basic_1.ipynb  basic_1.py  basic_2.ipynb  basic_2.py  basic_3.py  basic_3a.py  basic_3b.py  basic_4.py  evensen_advection.py  generate_QG_time_series.py  index.html  loc_by_corr_thresh.py  param_estim.py  perfect_random_model_example.py  perfect_random_model_experiment_data.py  perfect_random_model_interactive.py  perfect_random_model_plot_data.py  stoch_model1.py  stoch_models.py  time-dep-obs-operator.py
javascripts/: extra.js
memory/: MEMORY.md  project_stats_modernisation.md
overrides/: main.html
reference/: index.html
references/: index.html
scripts/: L95_vs_true_F.py  benchmark_Barotropic.py  benchmark_LorenzXY.py  sqrt_rotations.py
search/: search_index.json
stylesheets/: code_select.css  jupyter.css
tests/: __init__.py  ci_cleanup.sh  ci_install.sh  test_HMM_imports.py  test_HMMs.py  test_TLMs.py  test_chronos.py  test_da_method.py  test_data.py  test_demos.py  test_example_2.py  test_hmm.py  test_iEnKS.py  test_localization.py  test_matrices.py  test_mods_import.py  test_operator.py  test_plotting.py  test_plotting_interactive.py  test_plotting_nonempty.py  test_printing.py  test_randvars.py  test_rng.py  test_round2.py  travis_install.sh
tools/: DAPPER.mplstyle  admin.py  chronos.py  colors.py  convenience.py  data_management.py  localization.py  math.py  matrices.py  misc.py  randvars.py  series.py  stoch.py  tabulate.py  utils.py  viz.py
tutorials/: Notes.txt  T1 - DA & EnKF.ipynb  T2 - Bayesian inference.ipynb  T3 - Univariate Kalman filtering.ipynb  T4 - Chaos and the dynamical properties of ensemble-based covariances.ipynb  T4 - Dynamical systems, chaos, Lorenz.ipynb  T5 - Ensemble [Monte-Carlo] approach.ipynb  T6 - Writing your own EnKF.ipynb  T7 - Benchmarking with DAPPER.ipynb  answers.py  resources.py  todo.txt
(+609 files in other folders)
